--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -13,6 +13,6 @@
   </header>
 
   <section>
-      <p>Welcome to OpenCollea. Please click <a href="/portal/">here</a> to log into our web portal.</p>
+      <p>Welcome to OpenCollea. Please click <a href="{% url 'portal:login' %}">here</a> to log into our web portal.</p>
   </section>
 {% endblock %}
