--- a/portal/templates/registration/login.html
+++ b/portal/templates/registration/login.html
@@ -18,7 +18,7 @@
       <p>Your username and password didn't match, please try again.</p>
     {% endif %}
 
-    <form method="post" action="."> {% csrf_token %}
+    <form method="post" action=""> {% csrf_token %}
       <p>
         <label for="id_username">Username:</label>
         {{ form.username }}
