Popravek index routa
Index sedaj routa preko roota in ne preko /homea

--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -12,7 +12,7 @@
 <div class="login">Login</div>
 <div class="header">
     <ul class="menu">
-        <li><a href="/home">OpenCollea</a></li>
+        <li><a href="/">OpenCollea</a></li>
         <li><a href="/courses">Courses</a></li>
         <li><a href="/users">Users</a></li>
         <li><a href="/forums">Forums</a></li>
