--- a/portal/templates/registration/login.html
+++ b/portal/templates/registration/login.html
@@ -1,17 +1,6 @@
 {% extends "base.html" %}
-{% comment %}
-  Main page to authenticate users.
-{% endcomment %}
 
-{% block head %}
-  <title>OpenCollea | Login</title>
-{% endblock %}
-
-{% block body %}
-  <header>
-    <h1>OpenCollea</h1>
-    <h2>Login Page</h2>
-  </header>
+{% block content %}
 
   <section>
     {% if form.errors %}
