Tortni diagram predmetov
Dodan tortni diagram predmetov, ki pa zaenkrat uporablja fake procente -
torej to je potrebno samo se nastimati, da se bo bralo iz baze in bo
taprava vrednost

--- a/opencollea/static/css/opencollea.css
+++ b/opencollea/static/css/opencollea.css
@@ -16,3 +16,11 @@
   color: #333333;
   white-space: nowrap;
  }
+
+
+ul.doubleList span {
+    padding: 0 5px;
+}
+.pieContainer {
+    margin: -80px 0 0 -180px;
+}
