--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="opencollea">
 <head>
     <title>OpenCollea - {{ title }}</title>
     <meta charset="utf-8">
@@ -59,7 +59,9 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">My Profile</a></li>
                   <li class="divider"></li>
-                  <li><a href="{% url 'portal:logout' %}">Sign Out</a></li>
+                  <li ng-controller="AuthController">
+                      <a ng-click="logout()">Sign Out</a>
+                  </li>
                 </ul>
               </li>
             </ul>
