--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -45,7 +45,7 @@
                 </ul>
               </li>
 
-              <li><a href="#"><i class="icon-globe icon-white"></i> Discover</a></li>
+              <li><a href="/courses"><i class="icon-globe icon-white"></i> Discover</a></li>
               <li><a href="#"><i class="icon-glass icon-white"></i> Socialize</a></li>
             </ul>
 
