--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -60,7 +60,7 @@
                   <li><a href="#">My Profile</a></li>
                   <li class="divider"></li>
                   <li ng-controller="AuthController">
-                      <a ng-click="logout()">Sign Out</a>
+                      <a ng-click="logout()" href="#">Sign Out</a>
                   </li>
                 </ul>
               </li>
