--- a/opencollea/static/css/opencollea.css
+++ b/opencollea/static/css/opencollea.css
@@ -24,3 +24,11 @@ ul.doubleList span {
 .pieContainer {
     margin: -80px 0 0 -180px;
 }
+
+.footer {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 0;
+    border-top: 1px solid #ccc;
+}
