--- a/opencollea/static/css/opencollea.css
+++ b/opencollea/static/css/opencollea.css
@@ -18,11 +18,34 @@
  }
 
 
-ul.doubleList span {
-    padding: 0 5px;
+ul.doubleList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-.pieContainer {
-    margin: -80px 0 0 -180px;
+
+ul.doubleList li {
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-bottom: 1px solid #ccc;
+}
+
+ul.doubleList li:last-child {
+  border: none;
+}
+
+ul.doubleList li a {
+  text-decoration: none;
+  font-size: 15px;
+  color: #999;
+}
+
+ul.doubleList li a:hover {
+  background: #f6f6f6;
+  color: #000;
+}
+
+.rightFloater {
+    float: right;
 }
 
 .footer {
@@ -40,4 +63,12 @@ ul.doubleList span {
 .msgDiv {
     display: none;
     width: 206px;
+}
+
+.row-fluid {
+    margin-top: 20px;
+}
+
+.pieContainer svg {
+    top: -80px;
 }
