--- a/opencollea/static/partials/course/course-list.html
+++ b/opencollea/static/partials/course/course-list.html
@@ -2,17 +2,23 @@
   <div class="row-fluid">
     <div class="span3">
       <!--Sidebar content-->
+        <form class="form-search">
+            <div class="input-append">
+                <input ng-model="query" type="text" class="span10 search-query" placeholder="Search courses">
+                <button type="submit" class="btn">Search</button>
+            </div>
+        </form>
 
-      Search: <input ng-model="query">
 
     </div>
     <div class="span9">
       <!--Body content-->
 
-      <ul class="courses doubleList id="coursesList">
+      <ul class="courses doubleList" id="coursesList">
         <li ng-repeat="course in courses.objects | filter:query">
-            <span>{{ course.title }}</span>
+            <a href="#/course/{{ course.machine_readable_title }}"><strong>{{ course.title }}</strong> </a>
             <span class="rightFloater"><a href="#">Enroll me</a></span>
+
         </li>
       </ul>
 
