--- a/opencollea/static/partials/course/course-detail.html
+++ b/opencollea/static/partials/course/course-detail.html
@@ -1,1 +1,5 @@
-TBD: detail view for {{courseTitle}}
+<div class="container-fluid">
+  <div class="row-fluid">
+    <h4>Welcome to {{courseTitle}}</h4>
+  </div>
+</div>
