Obrazcu dodani gumbi, ki spremenijo vrednost medtem ko se obrazec pošilja (Saving...).

--- a/opencollea/static/partials/profile/user-profile-form.html
+++ b/opencollea/static/partials/profile/user-profile-form.html
@@ -81,8 +81,8 @@
     </label>
 
     <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Save</button>
-      <button type="submit" class="btn">Save &amp; Continue</button>
+      <button form-save-button-loading="Saving..." type="submit" class="btn btn-primary">Save</button>
+      <button form-save-button-loading="Saving..." type="submit" class="btn">Save &amp; Continue</button>
     </div>
 
 
