--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -69,6 +69,19 @@
         </div>
       </div>
 
+      <!--
+        Example:
+            $rootScope.notifications = [{
+              class: 'alert-success',   // Twitter bootstrap css classes
+              content: 'Your profile was successfuly saved.'
+            }];
+      -->
+      <div ng-repeat="n in notifications">
+          <div class="alert {% templatetag openvariable %} n.class {% templatetag closevariable %}">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              {% templatetag openvariable %}  n.content {% templatetag closevariable %}
+          </div>
+      </div>
 
       <div ng-view></div>
 
