--- a/opencollea/static/partials/profile/user-profile-form.html
+++ b/opencollea/static/partials/profile/user-profile-form.html
@@ -112,8 +112,8 @@
 
 
     <div class="form-actions">
-      <button form-save-button-loading="Saving..." type="submit" class="btn btn-primary">Save</button>
-      <button form-save-button-loading="Saving..." type="submit" class="btn">Save &amp; Continue</button>
+      <button form-save-button-loading="Saving..." type="submit" ng-click="redirectBack=true" class="btn btn-primary">Save</button>
+      <button form-save-button-loading="Saving..." type="submit" ng-click="redirectBack=false" class="btn">Save &amp; Continue</button>
     </div>
 
 
