Dodal tabe na class-detail strani

--- a/opencollea/static/partials/home/home.html
+++ b/opencollea/static/partials/home/home.html
@@ -1,9 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span3">
+            <!--Sidebar content-->
+            <div class="well sidebar-nav">
+                <ul class="nav nav-list">
+                    <li class="nav-header">Your Classes</li>
+                    <li class="active"><a href="#">Programming</a></li>
+                    <li><a href="#">Kodekov kotiček</a></li>
+                    <li><a href="#">Bratkove umetnosti</a></li>
+                    <li><a href="#">Jurišičev krožek</a></li>
+                    <li class="nav-header">Recommended Classes</li>
+                    <li><a href="#">Artificial Inteligence</a></li>
+                    <li><a href="#">Databases</a></li>
+                    <li><a href="#">Ovo ono</a></li>
+                </ul>
+            </div><!--/.well -->
+        </div>
+        <div class="span9">
+            <!--Body content-->
+            <div class="leaderboard">
+                <h1>Class name</h1>
+                <p>Class description</p>
+                <p><a class="btn btn-success btn-large">Go to class/enroll me</a></p>
+            </div>
+            <div class="row-fluid">
+                <div class="span4">
+                    <h2>Activity 1</h2>
+                    <p>Janko posted picture. </p>
+                    <p><a class="btn btn-success btn-large" href="#">Go to activity</a></p>
+                </div><!--/span-->
+                <div class="span4">
+                    <h2>Activity 2</h2>
+                    <p>Micka asked question. </p>
+                    <p><a class="btn btn-success btn-large" href="#">Go to activity</a></p>
+                </div><!--/span-->
+                <div class="span4">
+                    <h2>Activity 3</h2>
+                    <p>Dule did something. </p>
+                    <p><a class="btn btn-success btn-large" href="#">Go to something.</a></p>
+                </div><!--/span-->
+            </div>
+        </div>
+    </div>
+</div>
