--- a/opencollea/static/partials/course/course-detail.html
+++ b/opencollea/static/partials/course/course-detail.html
@@ -1,5 +1,27 @@
 <div class="container-fluid">
-  <div class="row-fluid">
-    <h4>Welcome to {{courseTitle}}</h4>
-  </div>
+    <div class="row-fluid">
+        <h4>Welcome to {{courseTitle}}</h4>
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
+            <li><a href="#references" data-toggle="tab">References</a></li>
+            <li><a href="#questions" data-toggle="tab">Questions & Answers</a></li>
+            <li><a href="#notes" data-toggle="tab">Notes</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="activity">
+                <p>Activity feed</p>
+            </div>
+            <div class="tab-pane" id="references">
+                <p>References page</p>
+            </div>
+            <div class="tab-pane" id="questions">
+                <p> Page for Q&A</p>
+            </div>
+            <div class="tab-pane" id="notes">
+                <p> Notes page</p>
+            </div>
+
+
+        </div>
+    </div>
 </div>
