Registration Details form.

--- a/opencollea/static/partials/profile/user-profile-form.html
+++ b/opencollea/static/partials/profile/user-profile-form.html
@@ -19,7 +19,7 @@
       </li>
 
       <li>
-        <a href="#/auth/{{user.username}}/edit">
+        <a href="#/auth/edit">
           <i class="icon-briefcase"></i>
           Registration Details
         </a>
