Coure notes scaffold.

--- a/opencollea/static/partials/course/course-detail.html
+++ b/opencollea/static/partials/course/course-detail.html
@@ -26,11 +26,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="tab-pane" id="notes">
-                <p> Notes page</p>
-            </div>
 
-
+            <!-- Notes -->
+            <div class="tab-pane" id="notes" ng-include src="'/static/partials/course/course-notes.html'"></div>
         </div>
     </div>
 </div>
