--- a/opencollea/static/partials/course/course-detail.html
+++ b/opencollea/static/partials/course/course-detail.html
@@ -4,7 +4,7 @@
         <ul class="nav nav-tabs">
             <li><a href="#activity">Activity</a></li>
             <li><a href="#references">References</a></li>
-            <li><a href="#/course/{{ course.machine_readable_title }}/questions">Questions & Answers</a></li>
+            <li ng-class="{active: subpage == 'questions'}"><a href="#/course/{{ course.machine_readable_title }}/questions">Questions & Answers</a></li>
             <li ng-class="{active: subpage == 'notes'}"><a href="#/course/{{ course.machine_readable_title }}/notes">Notes</a></li>
         </ul>
         <div>
