--- a/opencollea/static/partials/profile/user-registration-edit-form.html
+++ b/opencollea/static/partials/profile/user-registration-edit-form.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 <div class="span3">
   <div class="big-avatar">
-    <gravatar-image data-email="currentUser.email" data-size="250" data-rating="pg" data-default="http://www.gravatar.com/avatar/uporabnik-nima-slike?size=250"></gravatar-image>
+    <gravatar-image data-email="currentUser.email" data-size="250" data-default="http://www.gravatar.com/avatar/uporabnik-nima-slike?size=250"></gravatar-image>
     <br>
     <a href="http://gravatar.com/" target="_blank" class="btn btn-mini btn-upload btn-primary">
       <i class="icon-white icon-upload"></i>
